# nest-protect-mcp

./: .bumpversion.toml  .gitignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  TROUBLESHOOTING.md  build_dxt.ps1  claude_desktop_config.example.json  dxt_build.py  glama.json  inspect_fastmcp.py  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.ps1  start.ps1.bak.20260508_202350  test_build.py  test_dxt_build.py  test_fastmcp.py  test_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency.yml  docker.yml  maintenance.yml  notifications.yml  release.yml
.windsurf/rules/global_rules/: rules1.md
_llm_test_scripts/: inspect_fastmcp.py  test_build.py  test_server.py
assets/prompts/: examples.json  system.md  user.md
config/: default.toml  default.toml.example
docs/: AI_DEVELOPMENT_RULES.md  AI_DEVELOPMENT_TOOLS_COMPARISON.md  AUTH_SETUP.md  DEBUGGING_LESSONS_LEARNED.md  DEVELOPMENT_PAIN_POINTS.md  GOLD_STATUS_ACHIEVEMENT.md  MCP_PRODUCTION_CHECKLIST.md  NEST_API_REFERENCE.md  PRD.md  PROJECT_STATUS_REPORT.md  README.md  SETUP_GUIDE.md  SYSTEMATIC_PROJECT_UPDATES.md  TECHNICAL_ARCHITECTURE.md  TOOLS_REFERENCE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_FASTMCP_2.12.md
docs/mcpb-packaging/: MCPB_BUILDING_GUIDE.md
dxt/: README_DXT.md  build.ps1  build_dxt.ps1  debug_build.py  dxt_build.py  dxt_manifest.json  simple_build.py  simple_test.py  test_build.py  test_imports.py  verify_build.py
mcpb/: manifest.json  mcpb.mcpb
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/nest_protect_mcp/: __main__.py  cli.py  constants.py  exceptions.py  fastmcp_server.py  models.py  server.py  state_manager.py  tools.py
mcpb/src/nest_protect_mcp/tools/: __init__.py  ai_orchestration.py  auth_tools.py  config_tools.py  device_control.py  device_status.py  help_tool.py  system_status.py
scripts/: get_nest_refresh_token.py  open_gcp_oauth_credentials.ps1
src/nest_protect_mcp/: __init__.py  __main__.py  cli.py  exceptions.py  fastmcp_server.py  fastmcp_server.py.bak  mcp_compliant_server.py  mcp_server.py  models.py  server.py  simple_mcp_server.py  state_manager.py  tools.py  transport.py  wizard_auth.py
src/nest_protect_mcp/tools/: __init__.py  about_tool.py  ai_orchestration.py  auth_tools.py  config_tools.py  device_control.py  device_status.py  help_tool.py  system_status.py
tests/: __init__.py  conftest.py  mock_device_testing.py  real_device_testing.py  test_comprehensive_mcp.py
tests/integration/: __init__.py  test_authentication.py  test_backend_routes.py  test_fastapi_integration.py  test_mcp_operations.py  test_server.py  test_server_comprehensive.py
tests/unit/: __init__.py  test_auth_tools.py  test_cli.py  test_models.py  test_state_manager.py  test_tools.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202350  vite.config.ts
web_sota/src/: App.tsx  main.tsx
web_sota/src/components/: AuthWizard.tsx  HelpModal.tsx
web_sota/src/components/layout/: sidebar.tsx  topbar.tsx
web_sota/src/components/ui/: dialog.tsx
web_sota/src/pages/: chat.tsx  dashboard.tsx  onboarding.tsx  settings.tsx
webapp/: README.md  package.json
webapp/backend/: main.py  requirements.txt
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: App.tsx
webapp/frontend/src/components/: Layout.tsx
webapp/frontend/src/hooks/: use-toast.ts
webapp/frontend/src/pages/: ConversationalInterface.tsx  Dashboard.tsx  DeviceTesting.tsx  MCPStatus.tsx  Settings.tsx
webapp/frontend/src/types/: mcp.ts
