[build-system]
requires = ["setuptools>=65.0.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-protect-mcp"
version = "0.1.0"
description = "Message Control Protocol (MCP) server for Nest Protect devices"
readme = "README.md"
authors = [
    {name = "Sandra Schiessl", email = "sandra.schiessl@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Typing :: Typed"
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/sandraschi/nest-protect-mcp"
Documentation = "https://github.com/sandraschi/nest-protect-mcp#readme"
Issues = "https://github.com/sandraschi/nest-protect-mcp/issues"
Source = "https://github.com/sandraschi/nest-protect-mcp"

[project.scripts]
nest-protect-mcp = "nest_protect_mcp.cli:main"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.3.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-xdist[psutil]>=3.3.0,<4.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "respx>=0.20.0,<1.0.0",
    "mypy>=1.1.0,<2.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
    "types-requests>=2.28.0,<3.0.0",
    
    # Documentation
    "mkdocs>=1.4.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocstrings[python]>=0.20.0,<1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0,<2.0.0",
    
    # Code quality
    "black>=23.3.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-bugbear>=23.3.0,<24.0.0",
    "ruff>=0.0.260,<0.1.0",
    "pre-commit>=3.0.0,<4.0.0",
    
    # Build and release
    "build>=0.10.0,<1.0.0",
    "twine>=4.0.0,<5.0.0"
]

[project.dependencies]
# Core dependencies
fastmcp = ">=2.11.3,<3.0.0"
pydantic = ">=2.0.0,<3.0.0"
aiohttp = ">=3.8.0,<4.0.0"

# Web server and API
fastapi = ">=0.95.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.21.0,<1.0.0"}
websockets = ">=11.0.0,<12.0.0"

# Configuration and utilities
python-dotenv = ">=1.0.0,<2.0.0"
tomli = ">=2.0.0,<3.0.0"
python-dateutil = ">=2.8.2,<3.0.0"

# Async utilities
anyio = ">=3.6.0,<4.0.0"

# HTTP client
httpx = ">=0.24.0,<1.0.0"

# Logging
structlog = ">=23.1.0,<24.0.0"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
nest_protect_mcp = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nest_protect_mcp"]
exclude = ["tests", "tests.*"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "UP"   # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E501"   # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["S101"]     # use of assert in tests

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "fastapi.*", "pydantic.*"]
ignore_missing_imports = true
